[package]
name = "bts"
version = "1.3.0"
edition = "2018"

[dependencies]
clap = { version = "*", features = ["derive"] }

serde_json = "*"
serde = { version = "*", features = ["derive"] }
glob = "*"
rand = "*"
uuid = { version = "*", features = ["serde", "v4"] }

tokio-tungstenite = "*"
tokio = { version = "*", features = ["full"] }
futures-util = "*"
futures-channel = "*"
tungstenite = {version="*", features=["native-tls"]}
env_logger = "*"
log = "*"