[package]
name = "bts"
version = "1.4.0"
edition = "2018"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "*", features = ["derive"] }

serde_json = "*"
serde = { version = "*", features = ["derive"] }
glob = "*"
rand = "*"
uuid = { version = "*", features = ["serde", "v4"] }

tokio-tungstenite = "*"
tokio = { version = "*", features = ["full"] }
futures-util = "*"
futures-channel = "*"
tungstenite = {version="*", features=["native-tls"]}
env_logger = "*"
log = "*"