[package]
name = "bts"
version = "1.70.0"
edition = "2018"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }

serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
glob = "0.3.1"
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["serde", "v4"] }

tokio-tungstenite = "0.18.0"
tokio = { version = "1.25.0", features = ["full"] }
futures-util = "0.3.26"
futures-channel = "0.3.26"
tungstenite = {version="0.18.0", features=["native-tls"]}
env_logger = "0.10.0"
log = "0.4.17"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
crossterm = "0.27.0"

[[bin]]
name = "activity"
path = "src/activity.rs"

[[bin]]
name = "bts"
path = "src/main.rs"

